Fix spacing issue in search page

--- a/src/components/search/styles.css
+++ b/src/components/search/styles.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: center;
     width: auto;
-    height: 100vh;
+    margin-top: 250px;
+    margin-bottom: -50px;
 }
 
 .search-input {
